Adicionado testes unitarios para ApiExceptionHandler